# P5-Kuka-Dual-Arm

./: .gitignore  .gitmodules  CITATION.cff  LICENSE  README.md  requirements.txt
LLM/: LLM_with_Speech.py  STT.py  TTS.py  langchain_setup.py  ollama_VA.py
Tests/Vision Test Results/IoU test results/: filtered_sorted_iou.csv
Vision Test Results/IoU test results/: average_iou_by_color.csv
Vision Test Results/Precision and Recall test results/test_10/: summary.txt
Vision Test Results/Precision and Recall test results/test_3/: results.csv  summary.txt
Vision Test Results/Precision and Recall test results/test_4/: results.csv  summary.txt
Vision Test Results/Precision and Recall test results/test_5/: results.csv  summary.txt
Vision Test Results/Precision and Recall test results/test_6/: summary.txt
Vision Test Results/Precision and Recall test results/test_9/: results.csv
camera_ws/: Setup explanation.yaml
install/: local_setup.sh  setup.sh
install/chomp_motion_planner/lib/: libchomp_motion_planner.so.2.5.5
install/moveit_chomp_optimizer_adapter/lib/: libmoveit_chomp_optimizer_adapter.so.2.5.5
install/moveit_core/lib/: libcollision_detector_bullet_plugin.so.2.5.5  libmoveit_butterworth_filter.so.2.5.5  libmoveit_collision_detection.so.2.5.5  libmoveit_collision_detection_bullet.so.2.5.5  libmoveit_collision_detection_fcl.so.2.5.5  libmoveit_collision_distance_field.so.2.5.5  libmoveit_constraint_samplers.so.2.5.5  libmoveit_distance_field.so.2.5.5  libmoveit_dynamics_solver.so.2.5.5  libmoveit_exceptions.so.2.5.5  libmoveit_kinematic_constraints.so.2.5.5  libmoveit_kinematics_metrics.so.2.5.5  libmoveit_planning_interface.so.2.5.5  libmoveit_planning_request_adapter.so.2.5.5  libmoveit_planning_scene.so.2.5.5  libmoveit_robot_model.so.2.5.5  libmoveit_robot_state.so.2.5.5  libmoveit_robot_trajectory.so.2.5.5  libmoveit_test_utils.so.2.5.5  libmoveit_trajectory_processing.so.2.5.5  libmoveit_transforms.so.2.5.5  libmoveit_utils.so.2.5.5
install/moveit_hybrid_planning/lib/: libforward_trajectory_plugin.so.2.5.5  libmotion_planning_pipeline_plugin.so.2.5.5  libmoveit_global_planner_component.so.2.5.5  libmoveit_hybrid_planning_manager.so.2.5.5  libmoveit_local_planner_component.so.2.5.5  libreplan_invalidated_trajectory_plugin.so.2.5.5  libsimple_sampler_plugin.so.2.5.5  libsingle_plan_execution_plugin.so.2.5.5
install/moveit_kinematics/lib/: libmoveit_cached_ik_kinematics_base.so.2.5.5  libmoveit_cached_ik_kinematics_plugin.so.2.5.5  libmoveit_lma_kinematics_plugin.so.2.5.5  libmoveit_srv_kinematics_plugin.so.2.5.5
install/moveit_planners_chomp/lib/: libmoveit_chomp_interface.so.2.5.5
install/moveit_planners_ompl/lib/: libmoveit_ompl_interface.so.2.5.5  libmoveit_ompl_planner_plugin.so.2.5.5
install/moveit_ros_benchmarks/lib/: libmoveit_ros_benchmarks.so.2.5.5
install/moveit_ros_control_interface/lib/: libmoveit_ros_control_interface_empty_plugin.so.2.5.5  libmoveit_ros_control_interface_gripper_plugin.so.2.5.5  libmoveit_ros_control_interface_plugin.so.2.5.5  libmoveit_ros_control_interface_trajectory_plugin.so.2.5.5
install/moveit_ros_move_group/lib/: libmoveit_move_group_capabilities_base.so.2.5.5  libmoveit_move_group_default_capabilities.so.2.5.5
install/moveit_ros_occupancy_map_monitor/lib/: libmoveit_ros_occupancy_map_monitor.so.2.5.5
install/moveit_ros_perception/lib/: libmoveit_depth_image_octomap_updater.so.2.5.5  libmoveit_depth_image_octomap_updater_core.so.2.5.5  libmoveit_lazy_free_space_updater.so.2.5.5  libmoveit_mesh_filter.so.2.5.5  libmoveit_point_containment_filter.so.2.5.5  libmoveit_pointcloud_octomap_updater.so.2.5.5  libmoveit_pointcloud_octomap_updater_core.so.2.5.5  libmoveit_semantic_world.so.2.5.5
install/moveit_ros_planning/lib/: libmoveit_collision_plugin_loader.so.2.5.5  libmoveit_constraint_sampler_manager_loader.so.2.5.5  libmoveit_cpp.so.2.5.5  libmoveit_default_planning_request_adapter_plugins.so.2.5.5  libmoveit_kinematics_plugin_loader.so.2.5.5  libmoveit_plan_execution.so.2.5.5  libmoveit_planning_pipeline.so.2.5.5  libmoveit_planning_scene_monitor.so.2.5.5  libmoveit_rdf_loader.so.2.5.5  libmoveit_robot_model_loader.so.2.5.5  libmoveit_trajectory_execution_manager.so.2.5.5
install/moveit_ros_planning_interface/lib/: libmoveit_common_planning_interface_objects.so.2.5.5  libmoveit_move_group_interface.so.2.5.5  libmoveit_planning_scene_interface.so.2.5.5
install/moveit_ros_robot_interaction/lib/: libmoveit_robot_interaction.so.2.5.5
install/moveit_ros_visualization/lib/: libmoveit_motion_planning_rviz_plugin.so.2.5.5  libmoveit_motion_planning_rviz_plugin_core.so.2.5.5  libmoveit_planning_scene_rviz_plugin.so.2.5.5  libmoveit_planning_scene_rviz_plugin_core.so.2.5.5  libmoveit_robot_state_rviz_plugin.so.2.5.5  libmoveit_robot_state_rviz_plugin_core.so.2.5.5  libmoveit_rviz_plugin_render_tools.so.2.5.5  (+2 more)
log/: latest_build
p5_ws/: iiwa7.urdf  iiwa7_table.urdf  test.urdf
p5_ws/install/: local_setup.sh  setup.sh
p5_ws/src/moveit/moveit2/moveit_resources/iiwa_description/: CMakeLists.txt  package.xml
p5_ws/src/robutler/object_detector/: package.xml  setup.py
p5_ws/src/robutler/object_detector/object_detector/: detector_client.py  lego_bricks_config.json  object_detector.py
p5_ws/src/robutler/robutler_bringup/: CMakeLists.txt  package.xml
p5_ws/src/robutler/robutler_bringup/launch/: robutler.launch.py
p5_ws/src/robutler/set_moveit_coords/: CMakeLists.txt  package.xml
p5_ws/src/robutler/set_moveit_coords/launch/: set_moveit_coords.launch.py  set_moveit_planner_coords.launch.py
p5_ws/src/robutler/set_moveit_coords/src/: forward_kin.py  robot_controller_service.cpp  set_moveit_coords.cpp
robot_controller/: package.xml
robot_controller/robot_controller/: move_world.py
tests/: LLM_Test.xlsx
utils/: CameraCallibrationValues  MoveItCallibrationValues  calibrating_transformation.py  calibrating_transformation_camera_to_world.py  calibrating_transformation_world_to_robot.py.py  callibration.py
vision/: calibrating_transformation.py  callibration.py  objectdection.py  test_opencv.py
(+951 files in other folders)
