<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_controller</name>
  <version>0.0.0</version>
  <description>Package used for controlling two KUKA LBR IIWA 7 R800s</description>
  <maintainer email="kkla22@student.aau.dk">kasper</maintainer>
  <license>Apache-2.0</license>
  
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sys</exec_depend>
  <exec_depend>copy</exec_depend>
  <exec_depend>lbr_fri_idl</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
