<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>object_detector</name>
  <version>0.0.0</version>
  <description>Package for finding objects on white surface</description>
  <maintainer email="tiver22@student.aau.dk">thor</maintainer>
  <license>Apache Licens 2.0</license>

  <depend>rclpy</depend>
  <depend>cv2</depend>
  <depend>numpy</depend>
  <depend>pyrealsense2</depend>
  <depend>json</depend>
  <depend>os</depend>
  <depend>example_interfaces</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
